FIX: overflow wrapper with following pages content

--- a/src/styles/_followers.scss
+++ b/src/styles/_followers.scss
@@ -13,6 +13,7 @@
   }
 
   .white-bg-block {
+    overflow-x: hidden;
 
     > .container {
 
